# tinge

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LANGUAGE_DETECTION.md  Makefile  README.md  create_embedding.ipynb  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  eval_feature_plan.md  make_QR_code.py  package-lock.json  package.json  plan_evaluation_dashboard.md  setup.sh  transparent_tutoring_module.md  words.txt
backend/: .eslintrc.json  .gitignore  .railwayignore  Dockerfile  build.sh  package-lock.json  package.json  railway.toml  requirements.txt  server.js  server_backup.js
docs/: corrective_rag_langgraph_flow.mmd  corrective_rag_langgraph_plan.md  elasticsearch_haystack_phase1_plan.md  local_review_checklist.md  railway_runbook.md  realtime_ga_migration_plan.md  realtime_hardening_plan.md  tech_debt_register.md  transparent_tutoring_module_plan.md
embedding-service/: .eslintrc.json  Dockerfile  compute_embedding.py  logger.js  package-lock.json  package.json  railway.toml  requirements.txt  server.js  (+1 more)
evaluation/generative_student_personas/: README.md  pyproject.toml  test_personas.jsonl
evaluation/generative_student_personas/configs/: correlations.yaml
evaluation/generative_student_personas/examples/: run.sh
evaluation/generative_student_personas/scripts/: generate_personas.py
evaluation/generative_student_personas/src/student_personas/: __init__.py  behavior.py  cli.py  correlations.py  dimensions.py  exporters.py  persona.py  prompts.py  sampling.py  selection.py  simulate.py
(+263 files in other folders)
